nginx 프록시 설정 추가

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -4,3 +4,7 @@ resources:
   - postgres.yaml
   - backend.yaml
   - frontend.yaml
+configMapGenerator:
+  - name: nginx
+    files:
+      - configs/default.conf
