--- a/k8s/configs/default.conf
+++ b/k8s/configs/default.conf
@@ -7,11 +7,13 @@ server {
 
     location /api/ {
         proxy_pass http://backend.default.svc.cluster.local:4000;
-    }
-
-    location /api/movies/init {
-        proxy_pass http://backend.default.svc.cluster.local:4000;
         proxy_read_timeout 6000s;  # 응답 타임아웃을 300초로 설정
         proxy_connect_timeout 6000s;  # 연결 타임아웃을 300초로 설정
     }
+
+    # location /api/movies/init {
+    #     proxy_pass http://backend.default.svc.cluster.local:4000;
+    #     proxy_read_timeout 6000s;  # 응답 타임아웃을 300초로 설정
+    #     proxy_connect_timeout 6000s;  # 연결 타임아웃을 300초로 설정
+    # }
 }
