--- a/k8s/configs/default.conf
+++ b/k8s/configs/default.conf
@@ -7,5 +7,7 @@ server {
 
         location /api/ {
             proxy_pass http://backend.default.svc.cluster.local:4000;
+            proxy_read_timeout 900s;  # 응답 타임아웃을 900초로 설정
+            proxy_connect_timeout 900s;  # 연결 타임아웃을 900초로 설정
 	}
 }
