--- a/k8s/nginx.yaml
+++ b/k8s/nginx.yaml
@@ -45,6 +45,8 @@ kind: Ingress
 metadata:
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
   labels:
     app.kubernetes.io/managed-by: kargocd
   name: nginx
