--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_0a64b5485f0a # 우리 리액트 이미지
+          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_aef56d1282aa # 우리 프론트 이미지
 ---
 apiVersion: v1
 kind: Service
