--- a/k8s/nginx.yaml
+++ b/k8s/nginx.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:latest
+        image: nginx:1.21.6
         ports:
         - containerPort: 80
         volumeMounts:
