--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -14,16 +14,13 @@ spec:
       containers:
         - name: backend
           image: krmp-d2hub-idock.9rum.cc/dev-test/repo_93b1eb05f841 # 우리 백 이미지
-          # env:
-          #   - name: DATABASE_URL
-          #     value: jdbc:mariadb://mariadb:3306/krampoline
           resources:
             requests:
               memory: 1Gi
-          # readinessProbe:
-          #   httpGet:
-          #     path: /api/test
-          #     port: 4000
+          readinessProbe:
+            httpGet:
+              path: /api/test
+              port: 4000
 ---
 apiVersion: v1
 kind: Service
