--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -17,10 +17,10 @@ spec:
           resources:
             requests:
               memory: 1Gi
-          # readinessProbe:
-          #   httpGet:
-          #     path: /api/test
-          #     port: 4000
+          readinessProbe:
+            httpGet:
+              path: /api/test
+              port: 4000
 ---
 apiVersion: v1
 kind: Service
