--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - postgres.yaml
   - backend.yaml
   - frontend.yaml
+  - docker.yaml
 configMapGenerator:
   - name: nginx
     files:
