--- a/k8s/configs/default.conf
+++ b/k8s/configs/default.conf
@@ -7,5 +7,9 @@ server {
 
         location /api/ {
             proxy_pass http://backend.default.svc.cluster.local:4000;
+            proxy_connect_timeout 600s;
+            proxy_send_timeout 600s;
+            proxy_read_timeout 600s;
+            send_timeout 600s;
 	}
 }
