환경변수 설정 포기

--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -17,6 +17,9 @@ spec:
           resources:
             requests:
               memory: 1Gi
+          envFrom:
+          - configMapRef:
+            name: spring-config
           # readinessProbe:
           #   httpGet:
           #     path: /api/test
