--- a/k8s/configs/default.conf
+++ b/k8s/configs/default.conf
@@ -3,6 +3,9 @@ server {
 
         location / {
             proxy_pass http://frontend.default.svc.cluster.local:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
 
         location /api/ {
@@ -12,4 +15,5 @@ server {
             proxy_read_timeout 600s;
             send_timeout 600s;
 	}
+
 }
