--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -13,17 +13,25 @@ spec:
         app: postgres
     spec:
       containers:
-      - name: postgres
-        image: postgres:alpine  # 원하는 이미지 버전 선택
-        env:
-        - name: POSTGRES_DB
-          value: "cineffi"
-        - name: POSTGRES_USER
-          value: "root"
-        - name: POSTGRES_PASSWORD
-          value: "n1234"
-        ports:
-        - containerPort: 5432  # PostgreSQL 기본 포트
+        - name: postgres
+          image: postgres:alpine  # 원하는 이미지 버전 선택
+          env:
+          - name: POSTGRES_DB
+            value: "cineffi"
+          - name: POSTGRES_USER
+            value: "root"
+          - name: POSTGRES_PASSWORD
+            value: "n1234"
+          ports:
+          - containerPort: 5432  # PostgreSQL 기본 포트
+          volumeMounts:
+          - name: postgres-volume
+            mountPath: /var/lib/postgres
+        volumes:
+        - name: postgres-volume
+          persistentVolumeClaim:
+            claimName: postgres-pvc
+
 ---
 apiVersion: v1
 kind: Service
@@ -36,3 +44,15 @@ spec:
   - port: 5432
     targetPort: 5432
     protocol: TCP
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 30Gi
