--- a/k8s/configs/default.conf
+++ b/k8s/configs/default.conf
@@ -14,6 +14,8 @@ server {
             proxy_send_timeout 600s;
             proxy_read_timeout 600s;
             send_timeout 600s;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
 	}
 
 }
