--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: postgres:alpine  # 원하는 이미지 버전 선택
+        image: postgres:16  # 원하는 이미지 버전 선택
         env:
         - name: POSTGRES_DB
           value: "cineffi"
