--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: postgres:16  # 원하는 이미지 버전 선택
+        image: krmp-d2hub-idock.9rum.cc/dev-test/repo_d710bddef264  # postgres 이미지
         env:
         - name: POSTGRES_DB
           value: "cineffi"
