--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -18,8 +18,9 @@ spec:
         ports:
         - containerPort: 6379
         env:
-          - name: REDIS_PW
-            value: "mooyaho"
+        - name: REDIS_PASSWORD
+          value: "mooyaho"
+        command: ["redis-server", "--requirepass", "$(REDIS_PASSWORD)"]
 ---
 apiVersion: v1
 kind: Service
