--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -54,3 +54,22 @@ data:
   # kobis_api_key: 333eabf2df141a538e910bae70243fc1 #10
   # kobis_api_key: 0994d8ac050005fb257070390088ea85 #11
   kobis_api_key: eb64f7ff5664a19e68063e2369de4cda #12
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: backend-hpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: backend
+  minReplicas: 1
+  maxReplicas: 2
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
