--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -55,7 +55,7 @@ data:
   # kobis_api_key: 0994d8ac050005fb257070390088ea85 #11
   kobis_api_key: eb64f7ff5664a19e68063e2369de4cda #12
 ---
-apiVersion: autoscaling/v2
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: backend-hpa
