--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -28,11 +28,7 @@ spec:
         - name: data
           mountPath: /var/lib/postgresql/data
         - name: config
-          mountPath: /etc/postgresql/postgresql.conf
-          subPath: postgresql.conf
-        - name: hba
-          mountPath: /etc/postgresql/pg_hba.conf
-          subPath: pg_hba.conf
+          mountPath: /etc/postgresql
         - name: recovery
           mountPath: /var/lib/postgresql/data/recovery.conf
           subPath: recovery.conf
@@ -43,16 +39,8 @@ spec:
           items:
           - key: postgresql.conf
             path: postgresql.conf
-      - name: hba
-        configMap:
-          name: postgres-config
-          items:
           - key: pg_hba.conf
             path: pg_hba.conf
-      - name: recovery
-        configMap:
-          name: postgres-config
-          items:
           - key: recovery.conf
             path: recovery.conf
   volumeClaimTemplates:
