--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -28,7 +28,7 @@ spec:
               valueFrom:
                 configMapKeyRef:
                   name: backend-configmap          # 이 값의 컨피그맵.
-                  key: ddl-auto # 가져올 키.
+                  key: ddl_auto # 가져올 키.
             
 
 ---
@@ -48,7 +48,7 @@ kind: ConfigMap
 metadata:
   name: backend-configmap
 data:
-  ddl-auto: none
+  ddl_auto: none
   # kobis_api_key: 5b5979d8f9822605465799f4de0d864a #1
   kobis_api_key: f97089e51098e3098753d84bea65f507 #2
   # kobis_api_key: 5873d607725ac6c9564a8954da0c178a #3
